Grid and Scrollbar fix
Fixed project grid border negative margin issue and scrollbar styling.

--- a/web/src/components/project-preview-grid.module.css
+++ b/web/src/components/project-preview-grid.module.css
@@ -3,6 +3,7 @@
 
 .root {
   /* margin: 2em 0 4em; */
+  border-top: 1px #000000 solid;
 }
 
 .headline {
@@ -25,7 +26,8 @@
   list-style: none;
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 0em;
+  grid-gap: 1px;
+  background: #000000;
 
   @media (--media-min-small) {
     grid-template-columns: 1fr 1fr;
