--- a/web/src/components/project-preview.module.css
+++ b/web/src/components/project-preview.module.css
@@ -1,10 +1,11 @@
 .root {
-  display: block;
+  display: grid;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #000000;
-  margin:0 -1px -1px 0;
+  /* border: 1px solid #000000;
+  margin:0 -1px -1px 0; */
   min-height: 100%;
+  background-color: #ffffff;
   @nest &:hover {
     background-color: #0000FF;
     color: #ffffff;
