--- a/web/src/styles/custom-properties.css
+++ b/web/src/styles/custom-properties.css
@@ -94,34 +94,40 @@ footer {
 }
 /* Scroll Bar */
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 12px;
   height: 6px;
 }
 ::-webkit-scrollbar-button {
   width: 0px;
   height: 0px;
+  border: 1px solid black;
+  border-radius: 1px;
 }
 ::-webkit-scrollbar-thumb {
   background: #0000ff;
-  border: 0px none #ffffff;
-  border-radius: 0px;
+  border: 1px solid black;
+  border-radius: 1px;
 }
 ::-webkit-scrollbar-thumb:hover {
   background: #0000ff;
 }
 ::-webkit-scrollbar-thumb:active {
   background: #ff8f66;
+  border: 1px solid black;
+  border-radius: 1px;
 }
 ::-webkit-scrollbar-track {
   background: #d3b3ff;
-  border: 0px none #ffffff;
-  border-radius: 0px;
+  border: 1px solid black;
+  border-radius: 1px;
 }
 ::-webkit-scrollbar-track:hover {
   background: #d3b3ff;
 }
 ::-webkit-scrollbar-track:active {
   background: #0000ff;
+  border: 1px solid black;
+  border-radius: 1px;
 }
 ::-webkit-scrollbar-corner {
   background: transparent;
